Prevent mods from modifying the mod list (#235)
---------

Co-authored-by: shartte <shartte@users.noreply.github.com>